--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -432,7 +432,7 @@
     }
 
     &__friends {
-
+        display: flex;
     }
 
     &__photo {
@@ -460,6 +460,11 @@
     margin-bottom: 3.5rem;
     position: relative;
     overflow: hidden;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2rem;
+        margin-bottom: 3rem;
+    }
 
     &__text {
         margin-bottom: 2rem;
@@ -525,6 +530,10 @@
 .cta {
     padding: 3.5rem 0;
     text-align: center;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2.5rem 0;
+    }
 
     &__book-now {
         font-size: 2rem;
